# archivators

./: CMakeLists.txt  README.md
include/: archivator.h  file_streams.h  huffman_archivator.h  log_duration.h  rle_archivator.h
src/: huffman_archivator.cpp  main.cpp  rle_archivator.cpp
test/: photo.md  text.md  video.md
